new nav link updates

--- a/firstpage.html
+++ b/firstpage.html
@@ -6,7 +6,9 @@
     <title>First WEB PAGE</title>
 </head>
 <body>
+
     <h3>Links</h3>
+    <a href="index.html">Go To Home</a>
     <a href="second.html">Check My Profile</a>
     <a href="third page.html">Last Page</a>
     <h1>Sample Web Page</h1>
