--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 </head>
 <body>
+    <div><h1>Welcome</h1></div>
    <div><p>This is my sample Home Page</p>
-    <a href="firstpage.html">Last Page</a>
+    <a href="firstpage.html">First Page</a>
     <a href="second.html">Check My Profile</a>
     <a href="third page.html">Last Page</a>
 </div> 
 
-    <img src="images/MY NEW LOGO-01.jpg" alt="">
+    <img src="images/MY NEW LOGO-01.jpg" alt="" style="width: 300px;">
 </body>
 </html>
