--- a/second.html
+++ b/second.html
@@ -8,6 +8,7 @@
  <h1>My Profile</h1>
  <p>I am a student of computing and informatics. highly pass inIOT networks, Programming, 
     Artificial intelliegence,, I am fascinated with solving computer problems.</p>
+    <a href="index.html">Home</a>
     <a href="firstpage.html">Back to home</a>
     <a href="third page.html">Last</a>
     <body>
