--- a/third page.html
+++ b/third page.html
@@ -10,7 +10,8 @@
     <ul>
         <li>Telephone: 0763011525 </li>
         <li>Email: dkitumba@bugemauniv.com</li>
-        <a href="firstpage.html">Back to home</a>
+        <a href="index.html">Home</a>
+        <a href="firstpage.html">Fist Page</a>
         <a href="second.html">Check My Profile</a>
         
     </ul>
